--- a/views/index.jade
+++ b/views/index.jade
@@ -1,19 +1,92 @@
 extends layout
 
 append css
-    link(href="/public/css/style.css", rel="stylesheet")
+    link(href="/public/less/index.less", rel="stylesheet/less")
 
 append js
-    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js", type="text/javascript")
     script(src="/public/js/index.js", type='text/javascript')
-    script(src="/nowjs/now.js", type="text/javascript")
 
 block body
-    #container(style="width: 1024px; height: 756px; background: #892312 url(/public/images/bg_map.png) no-repeat scroll center")
-        h1 
-            a(href="/") 行踪
-        p
-            a(href="/accounts/login")登录
-        p
-            a(href="/follow")定位
+
+    header(class="navbar navbar-fixed-top")
+        div(class="navbar-inner")
+            div(class="container-fluid")
+                a(class="brand", href="/") XING ZONG
+                div(class="nav-collapse collapse")
+                    ul(class="nav")
+                        li(class="active")
+                            a(href="/") 行踪
+                        li(class="")
+                            a(href="/follow") 跟踪
+
+                div(class="nav pull-right")
+                    div(class="btn-group")
+                        - if (user)
+                            a(class="btn dropdown-toggle", data-toggle="dropdown", href="#")
+                                i(class="icon-user")
+                                #{user.username}
+                                b(class="caret")
+                            ul(class="dropdown-menu")
+                                li
+                                    a(href="/accounts/profile") 个人资料
+                                li
+                                    a(href="/accounts/settings") 个人设置
+                                li(class="divider")
+                                li
+                                    a(href="#") 退出
+                        - else
+                            a(class="btn btn-primary", href="/accounts/login")
+                                i(class="icon-user")
+                                &nbsp;&nbsp;登录
+                            a(class="btn btn-primary dropdown-toggle", data-toggle="dropdown")
+                                b(class="caret")
+                            ul(class="dropdown-menu")
+                                li
+                                    a(href="/accounts/qq/login") QQ登录
+                                li
+                                    a(href="/accounts/weibo/login") 微博登录
+
+                div(class="nav pull-right")
+                    form(class="navbar-search pull-left", action="")
+                        input(type="search", class="search-query span2", placeholder="搜搜")
+
+    div(class="container")
+        div(class="hero-unit")
+            h1 行踪
+            p
+            p 时刻保护着您的安全
+            p
+            p
+                a(class="btn btn-primary btn-large") 下载手机应用  »
+
+        div(class="row")
+
+            div(class="span4")
+                h2 功能
+                p 热爱旅行的朋友，在出门的时候是否会担心迷路？不会，因为我们有行踪定位，无论你走到哪里，都有我们的保护
+                p
+                    a(class="btn", href="#") 更多 »
+            
+            div(class="span4")
+                h2 用户
+                p 在城市中穿梭、在森林中散步、在雪山上攀登、在沙漠中穿行……我们的用户遍布中国，为您指引方向是我们责任，保障您的安全是我们的使命
+                p
+                    a(class="btn", href="#") 更多 »
+
+            div(class="span4")
+                h2 目标
+                p 打造全方位的安全防范，为您提供良好的后援支持。无论到哪里探险，我们都会一路护送，让您平安归来。
+                p
+                    a(class="btn", href="#") 更多 »
+
+    hr
+    footer(class="footer")
+        div(class="copyright")
+            a(href="http://www.miibeian.gov.cn/")
+                font(style="color: #bbb") 京ICP备09050704号
+            Copyright © 
+            a(href="/")
+                em
+                    font(style="color:#639805") foooooot.com
+            font(style="padding: 0 5px;") all rights reserved.
 
