--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,10 +3,18 @@
 head
     meta(name='viewport', content='initial-scale=1.0, user-scalable=no')
     meta(charset='utf-8')
+    block jquery
+        script(src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js")
+    block bootstrap
+        link(href="/public/bootstrap/css/bootstrap.min.css", rel="stylesheet")
+        link(href="/public/bootstrap/css/bootstrap-responsive.min.css", rel="stylesheet")
+        script(src="/public/bootstrap/js/bootstrap.js")
     block css
     block title
         title 行踪
     block js
+    block lessjs
+        script(src="/public/js/less-1.3.0.min.js")
 
 body
     block body
