--- a/views/follow.jade
+++ b/views/follow.jade
@@ -1,16 +1,27 @@
 extends layout
 
-append css
+append less
+    link(href="/public/less/follow.less", rel="stylesheet/less")
 
 append js
     script(src="//api.map.baidu.com/api?v=1.3", type="text/javascript")
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js", type="text/javascript")
     script(src="/nowjs/now.js", type="text/javascript")
     script(src="/public/js/follow.js", type="text/javascript")
-    script
-        now.ready(function(){
-            now.log(123);
-        })
 
 block body
-    #map(style="width:500px;height:500px;")
+    
+    include includes/header
+    .container-fluid(class="content")
+        .row-fluid
+            .span3
+                div(class="well sidebar-nav")
+                    ul(class="nav nav-list")
+                        li(class="nav-header")
+                            监控类型
+                        li
+                            实时监控
+            .span9
+                #map(style="width:500px;height:500px;")
+
+    include includes/footer
