--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@
 head
     meta(name='viewport', content='initial-scale=1.0, user-scalable=no')
     meta(charset='utf-8')
+    link(rel="icon", href="/public/favicon.ico", type="image/x-icon")
     block jquery
         script(src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js")
     block bootstrap
@@ -10,6 +11,7 @@ head
         link(href="/public/bootstrap/css/bootstrap-responsive.min.css", rel="stylesheet")
         script(src="/public/bootstrap/js/bootstrap.js")
     block css
+    block less
     block title
         title 行踪
     block js
