--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -8,7 +8,7 @@ header(class="navbar navbar-fixed-top")
             div(class="nav-collapse collapse")
                 ul(class="nav")
                     li(class="#{headerNavHome}")
-                        a(href="/") 行踪
+                        a(href="/") 首页
                     li(class="#{headerNavFollow}")
                         a(href="/follow") 跟踪
 
