--- a/views/follow.jade
+++ b/views/follow.jade
@@ -4,24 +4,26 @@ append less
     link(href="/public/less/follow.less", rel="stylesheet/less")
 
 append js
-    script(src="//api.map.baidu.com/api?v=1.3", type="text/javascript")
-    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js", type="text/javascript")
-    script(src="/nowjs/now.js", type="text/javascript")
-    script(src="/public/js/follow.js", type="text/javascript")
+    // script(src="//api.map.baidu.com/api?v=1.3")
+    script(src="/nowjs/now.js")
+    script(src="/public/js/follow.js")
 
 block body
     
     include includes/header
-    .container-fluid(class="content")
-        .row-fluid
-            .span3
-                div(class="well sidebar-nav")
-                    ul(class="nav nav-list")
-                        li(class="nav-header")
-                            监控类型
-                        li
-                            实时监控
-            .span9
-                #map(style="width:500px;height:500px;")
+    div(class="content")
+        nav(class="follow-type-bar")
+            ul(class="nav nav-pills nav-stacked")
+                li(class="nav-header active")
+                    a(href="#") 监控类型
+                li(class="nav-header")
+                    a(href="#") 实时监控
+                li(class="nav-header")
+                    a(href="#") 锁定跟踪
+                li(class="nav-header")
+                    a(href="#") 轨迹查看
+                    
+        .map-container
+            #map()
 
     include includes/footer
