--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ head
     meta(charset='utf-8')
     link(rel="icon", href="/public/favicon.ico", type="image/x-icon")
     block jquery
-        script(src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js")
+        script(src="/public/js/jquery-1.7.2.min.js")
     block bootstrap
         link(href="/public/bootstrap/css/bootstrap.min.css", rel="stylesheet")
         link(href="/public/bootstrap/css/bootstrap-responsive.min.css", rel="stylesheet")
