--- a/views/follow.jade
+++ b/views/follow.jade
@@ -4,7 +4,7 @@ append less
     link(href="/public/less/follow.less", rel="stylesheet/less")
 
 append js
-    // script(src="//api.map.baidu.com/api?v=1.3")
+    script(src="//api.map.baidu.com/api?v=1.3")
     script(src="/nowjs/now.js")
     script(src="/public/js/follow.js")
 
