update page with bootstrap

--- a/views/follow.jade
+++ b/views/follow.jade
@@ -14,11 +14,13 @@ block body
     div(class="content")
         nav(class="follow-type-bar")
             ul(class="nav nav-pills nav-stacked")
+                li
+                    &nbsp;
+                li(class="nav-header ")
+                    监控类型
+                li(class="nav-header")
+                    a(href="#") 多点监控
                 li(class="nav-header active")
-                    a(href="#") 监控类型
-                li(class="nav-header")
-                    a(href="#") 实时监控
-                li(class="nav-header")
                     a(href="#") 锁定跟踪
                 li(class="nav-header")
                     a(href="#") 轨迹查看
