--- a/views/index.jade
+++ b/views/index.jade
@@ -25,7 +25,7 @@ block body
                 h2 功能
                 p 热爱旅行的朋友，在出门的时候是否会担心迷路？不会，因为我们有行踪定位，无论你走到哪里，都有我们的保护
                 p
-                    a(class="btn", href="#") 更多 »
+                    a(class="btn", href="/follow") 更多 »
             
             .span4
                 h2 用户
